crates/aura-core/tests/boundaries/capability_name_from_string_constructor.stderr
error[E0308]: mismatched types
 --> tests/boundaries/capability_name_from_string_constructor.rs:4:34
  |
4 |     let _ = CapabilityName::from("chat:message:send");
  |             -------------------- ^^^^^^^^^^^^^^^^^^^ expected `CapabilityName`, found `&str`
  |             |
  |             arguments to this function are incorrect
  |
note: associated function defined here
 --> $RUST/core/src/convert/mod.rs
  |
  |     fn from(value: T) -> Self;
  |        ^^^^
