crates/aura-core/tests/boundaries/capability_name_from_string_constructor.rs
use aura_core::CapabilityName;

fn main() {
    let _ = CapabilityName::from("chat:message:send");
}
